--- a/resources/pos/src/locales/id.json
+++ b/resources/pos/src/locales/id.json
@@ -1,6 +1,6 @@
 {
     "dashboard.title": "Dasbor",
-    "header.pos.title": "Titik Penjualan",
+    "header.pos.title": "Point of Sales",
     "header.profile-menu.profile.label": "Profil",
     "header.profile-menu.change-password.label": "Ubah Kata Sandi",
     "header.profile-menu.logout.label": "Keluar",
@@ -8,7 +8,7 @@
     "expense.categories.title": "Kategori Biaya",
     "dashboard.salesReturn.title": "Retur Penjualan",
     "dashboard.top-customers.title": "5 Pelanggan Terbaik",
-    "dashboard.purchaseReturn.title": "Pengembalian Pembelian",
+    "dashboard.purchaseReturn.title": "Retur Pembelian",
     "dashboard.ThisWeekSales&Purchases.title": "Minggu ini Penjualan &; Pembelian",
     "dashboard.TopSellingProducts.title": "Produk Terlaris",
     "dashboard.stockAlert.title": "Peringatan Stok",
@@ -57,7 +57,7 @@
     "user.input.email.placeholder.label": "Masukkan Email",
     "user.input.phone-number.placeholder.label": "Masukkan Nomor Telepon",
     "user.input.password.placeholder.label": "Masukkan Kata Sandi",
-    "user.input.confirm-password.placeholder.label": "Masukkan Kata Sandi Konfirmasi",
+    "user.input.confirm-password.placeholder.label": "Masukkan Konfirmasi Kata Sandi",
     "user.input.role.placeholder.label": "Pilih Peran",
     "users.table.user.column.title": "Pengguna",
     "users.table.phone-number.column.title": "Nomor Telepon",
@@ -86,17 +86,17 @@
     "delete-modal.msg": "Apakah Anda yakin ingin menghapus ini",
     "delete-modal.yes-btn": "Ya, Hapus!",
     "delete-modal.no-btn": "Tidak, Batal",
-    "suppliers.title": "Pemasok",
-    "supplier.title": "Pemasok",
-    "supplier.create.title": "Buat Pemasok",
-    "supplier.edit.title": "Edit Pemasok",
+    "suppliers.title": "Supplier",
+    "supplier.title": "Supplier",
+    "supplier.create.title": "Buat Supplier",
+    "supplier.edit.title": "Edit Supplier",
     "supplier.table.name.column.title": "Nama",
     "supplier.table.phone-number.column.title": "Nomor Telepon",
     "supplier.table.email.column.title": "Email",
     "supplier.table.address.column.title": "Alamat",
-    "supplier.success.create.message": "Pemasok berhasil dibuat",
-    "supplier.success.edit.message": "Pemasok berhasil diperbarui",
-    "supplier.success.delete.message": "Pemasok berhasil dihapus",
+    "supplier.success.create.message": "Supplier berhasil dibuat",
+    "supplier.success.edit.message": "Supplier berhasil diperbarui",
+    "supplier.success.delete.message": "Supplier berhasil dihapus",
     "globally.input.name.label": "Nama",
     "globally.react-table.column.created-date.label": "Dibuat Pada",
     "globally.react-table.column.payment-type.label": "Jenis Pembayaran",
@@ -108,7 +108,7 @@
     "globally.input.country.label": "Negara",
     "globally.input.country.placeholder.label": "Masukkan Negara",
     "globally.input.city.label": "Kota",
-    "globally.input.city.placeholder.label": "Memasuki Kota",
+    "globally.input.city.placeholder.label": "Masukkan Kota",
     "globally.input.address.label": "Alamat",
     "globally.input.address.placeholder.label": "Masukkan Alamat",
     "globally.input.notes.label": "Catatan",
@@ -132,9 +132,9 @@
     "globally.back-btn": "Kembali",
     "globally.save-btn": "Simpan",
     "globally.cancel-btn": "Batal",
-    "globally.edit-btn": "Sunting",
+    "globally.edit-btn": "Edit",
     "globally.submit-btn": "Kirim",
-    "globally.edit.tooltip.label": "Sunting",
+    "globally.edit.tooltip.label": "Edit",
     "globally.delete.tooltip.label": "Menghapus",
     "globally.view.tooltip.label": "Melihat",
     "globally.pdf.download.label": "Unduh PDF",
@@ -192,8 +192,8 @@
     "product.input.product-category.placeholder.label": "Pilih Kategori Produk",
     "product.input.brand.label": "Merek",
     "product.input.brand.placeholder.label": "Pilih Merek",
-    "product.input.barcode-symbology.label": "Simbologi Kode Batang",
-    "product.input.barcode-symbology.placeholder.label": "Pilih Simbologi Barcode",
+    "product.input.barcode-symbology.label": "Kode Batang",
+    "product.input.barcode-symbology.placeholder.label": "Pilih Barcode",
     "product.input.product-cost.label": "Biaya Produk",
     "product.input.product-cost.placeholder.label": "Masukkan Biaya Produk",
     "product.input.product-price.label": "Harga Produk",
@@ -227,7 +227,7 @@
     "product.input.code.validate.label": "silakan masukkan kode",
     "product.input.product-category.validate.label": "Silakan pilih kategori produk",
     "product.input.brand.validate.label": "Silakan pilih merek",
-    "product.input.barcode-symbology.validate.label": "Silakan pilih simbologi barcode",
+    "product.input.barcode-symbology.validate.label": "Silakan pilih barcode",
     "product.input.product-cost.validate.label": "Silakan masukkan biaya produk",
     "product.input.product-price.validate.label": "Silakan masukkan harga produk",
     "product.input.product-unit.validate.label": "silakan pilih unit produk",
@@ -315,7 +315,7 @@
     "unit.success.delete.message": "Unit berhasil dihapus",
     "currencies.title": "Mata uang",
     "currency.title": "Mata uang",
-    "currency.create.title": "Membuat Mata Uang",
+    "currency.create.title": "Buat Mata Uang",
     "currency.edit.title": "Edit Mata Uang",
     "currency.modal.input.name.placeholder.label": "Masukkan Nama Mata Uang",
     "currency.modal.input.code.label": "Kode",
@@ -336,10 +336,10 @@
     "purchase.edit.title": "Edit Pembelian",
     "purchase.select.warehouse.label": "Gudang",
     "purchase.select.warehouse.placeholder.label": "Pilih Gudang",
-    "purchase.select.supplier.label": "Pemasok",
-    "purchase.select.supplier.placeholder.label": "Pilih Pemasok",
+    "purchase.select.supplier.label": "Supplier",
+    "purchase.select.supplier.placeholder.label": "Pilih Supplier",
     "purchase.select.warehouse.validate.label": "Silakan pilih gudang",
-    "purchase.select.supplier.validate.label": "Silakan pilih pemasok",
+    "purchase.select.supplier.validate.label": "Silakan pilih supplier",
     "purchase.select.status.label": "Status",
     "purchase.select.status.placeholder.label": "Pilih Status",
     "purchase.order-item.table.label": "Pesan barang",
@@ -365,9 +365,9 @@
     "purchase.success.delete.message": "Pembelian berhasil dihapus",
     "purchase.placeholder.notes.input": "Masukkan Catatan",
     "purchases.details.title": "Detail Pembelian",
-    "purchase.detail.supplier.info": "Info Pemasok",
+    "purchase.detail.supplier.info": "Info Supplier",
     "purchase.detail.purchase.info": "Info Pembelian",
-    "purchases.return.title": "Pengembalian Pembelian",
+    "purchases.return.title": "Retur Pembelian",
     "purchase.return.create.title": "Buat Retur Pembelian",
     "purchase.return.edit.title": "Edit Retur Pembelian",
     "purchase.return.success.create.message": "Retur pembelian berhasil dibuat",
@@ -445,7 +445,7 @@
     "change-password.input.confirm.label": "Konfirmasi Kata Sandi",
     "change-password.input.current.placeholder.label": "Masukkan Kata Sandi Saat Ini",
     "change-password.input.new.placeholder.label": "Masukkan Kata Sandi Baru",
-    "change-password.input.confirm.placeholder.label": "Masukkan Kata Sandi Konfirmasi",
+    "change-password.input.confirm.placeholder.label": "Masukkan Konfirmasi Kata Sandi",
     "change-password.input.current.validate.label": "Masukkan kata sandi saat ini",
     "change-password.input.new.validate.label": "Masukkan kata sandi baru",
     "change-password.input.confirm.validate.label": "Masukkan kata sandi konfirmasi",
