--- a/resources/pos/src/locales/id.json
+++ b/resources/pos/src/locales/id.json
@@ -679,7 +679,7 @@
     "sale-paid.total.amount.title": "Jumlah Total yang Dibayarkan",
     "sale-reference.title": "Referensi Penjualan",
     "quotation.detail.invoice.info": "Info Kutipan",
-    "pepole.title": "Masyarakat",
+    "pepole.title": "Pengguna",
     "more-report.option.title": "Lebih lanjut",
     "currency.icon.right.side.lable": "Ikon mata uang Sisi kanan",
     "pos.register-details.sell.title": "Jual",
