--- a/resources/pos/src/locales/id.json
+++ b/resources/pos/src/locales/id.json
@@ -1,6 +1,6 @@
 {
     "dashboard.title": "Dasbor",
-    "header.pos.title": "Point of Sales",
+    "header.pos.title": "POS",
     "header.profile-menu.profile.label": "Profil",
     "header.profile-menu.change-password.label": "Ubah Kata Sandi",
     "header.profile-menu.logout.label": "Keluar",
